# pystruction

./: .gitignore  .pre-commit-config.yaml  justfile  pyproject.toml
.github/workflows/: python-package.yml
src/pystruction/: __init__.py  commands.py
src/pystruction/templates/: .pre-commit-config.txt  justfile.txt  python-package.txt  test.txt
tests/: test_commands.py
