[project]
name = "pystruction"
version = "0.1.0"
description = "Python Project Starter Template Command Line Tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "typer>=0.15.4",
]

[project.scripts]
pystruction = "pystruction:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.2.0",
]
